Fix style error on firefox

--- a/packrat/styles/keeper/compose.less
+++ b/packrat/styles/keeper/compose.less
@@ -275,6 +275,7 @@ textarea.kifi-compose-draft::-moz-placeholder {
 }
 .kifi-ti-dropdown-parent {
   position: relative;
+  overflow-x: hidden;
 }
 .kifi-ti-dropdown {
   max-height: calc(55px * 4);
